--- a/LeaveApp/LeaveApp/LeaveApp.csproj
+++ b/LeaveApp/LeaveApp/LeaveApp.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LeaveApp.Dal\LeaveApp.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
