Added User save and get method

--- a/LeaveApp/LeaveApp/appsettings.json
+++ b/LeaveApp/LeaveApp/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "LeaveAppDatabase": "Server=.;Initial Catalog=LADataBase;Integrated Security=true" }
+  "ConnectionStrings": { "LeaveAppDatabase": "Server=.;Initial Catalog=LeaveAppDataBase;Integrated Security=true" }
 }
